build_error_utf8.txt
cargo :     Checking to
posynth v0.1.0 (E:\Proj
ects\toposynth)
発生場所 行:1 文字:1
+ cargo check 2>&1 | Ou
t-File -Encoding utf8 b
uild_error_utf8.txt
+ ~~~~~~~~~~~~~~~~
    + CategoryInfo     
         : NotSpecifi  
  ed: (    Checking    
 to...ects\toposynt    
h):String) [], Rem    o
teException
    + FullyQualifiedEr 
   rorId : NativeComm  
  andError
 
error[E0521]: borrowed 
data escapes outside of
 closure
  --> src\editor.rs:10:
9
   |
 9 |     let mut set_fl
oat = |param: &FloatPar
am, val: f32| {
   |                   
       -----  - let's c
all the lifetime of thi
s reference `'1`
   |                   
       |
   |                   
       `param` is a ref
erence that is only val
id in the closure body
10 |         cx.emit(Pa
ramEvent::BeginSetParam
eter(param));
   |         ^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^
   |         |
   |         `param` es
capes the closure body 
here
   |         argument r
equires that `'1` must 
outlive `'static`

warning: unused variabl
e: `shaper_mode`
   --> src\lib.rs:252:1
3
    |
252 |         let shape
r_mode = self.params.sh
aper_mode.value();
    |             ^^^^^
^^^^^^ help: if this is
 intentional, prefix it
 with an underscore: `_
shaper_mode`
    |
    = note: `#[warn(unu
sed_variables)]` (part 
of `#[warn(unused)]`) o
n by default

For more information ab
out this error, try `ru
stc --explain E0521`.
warning: `toposynth` (l
ib) generated 1 warning
error: could not compil
e `toposynth` (lib) due
 to 1 previous error; 1
 warning emitted
